@@ -2044,6 +2044,23 @@
 			  </child>
 
 			  <child>
+			    <widget class="GtkButton" id="button_pkgreconfigure">
+			      <property name="border_width">5</property>
+			      <property name="visible">True</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">Reconfigure</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <signal name="clicked" handler="on_button_pkgreconfigure_clicked" last_modification_time="Mon, 03 Mar 2003 09:30:32 GMT"/>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+
+			  <child>
 			    <widget class="GtkButton" id="button_pkghelp">
 			      <property name="border_width">5</property>
 			      <property name="visible">True</property>
