@@ -83,4 +83,5 @@ gchar *s = N_("Mark selected package for removal from system");
 gchar *s = N_("_Remove");
 gchar *s = N_("Never upgrade this package");
 gchar *s = N_("Hold package");
+gchar *s = N_("Reconfigure");
 gchar *s = N_("Show Pkg Help");
