@@ -4,6 +4,7 @@
  - "what will change" dialog
  - apt-cdrom is integrated now
  - undo/redo implemented
+ - filter and button for debconf packages (debian only)
 
 0.32
  - bugfixes 
